infrastructure/k8s-production/ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: connectix.dev
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: authentication-cluster-ip
              servicePort: 3000
          - path: /api/posts/?(.*)
            backend:
              serviceName: post-cluster-ip
              servicePort: 3000
          - path: /api/comments/?(.*)
            backend:
              serviceName: comment-cluster-ip
              servicePort: 3000
          - path: /api/followings/?(.*)
            backend:
              serviceName: following-cluster-ip
              servicePort: 3000
          - path: /api/moderations/?(.*)
            backend:
              serviceName: moderation-cluster-ip
              servicePort: 3000
          # - path: /?(.*)
          #   backend:
          #     serviceName: client-cluster-ip
          #     servicePort: 3000
